# WebappBlueprint

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: Dockerfile  data.db  passenger_wsgi.py  pyproject.toml
api/app/: config.py  database.py  jwt_utils.py  main.py  models.py  schemas.py
api/app/routers/: auth.py  items.py
api/data/: app.db
api/migrations/: env.py
api/tests/: conftest.py  test_items.py
docs/agent_docs/: frontend.md  git_workflow.md  python.md
scripts/: deploy.sh
src/: App.jsx  App.test.jsx  Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  Login.jsx  index.css  main.jsx
src/context/: AuthContext.jsx
